<resources>
    <string name="app_name">BPL BeWell</string>
    <string name="my_profile">My Profile</string>
    <string name="log_profile">Login Profile</string>
    <string name="user_guide">User\'s Guide</string>
    <string name="app_version">App Version</string>
    <string name="selection">Select your Device</string>
    <string name="select_option">Select Any Option</string>
    <string name="logout">LogOut</string>
    <string name="ioxy">BPLBeWell iOxy</string>
    <string name="weigh_mc">iWeigh User\'s Guide</string>
    <string name="bp">BPLBeWell iPressure BT02</string>
    <string name="name">Name</string>
    <string name="age">Age (Years)</string>
    <string name="gender">Gender</string>
    <string name="height">Height(cm)</string>
    <string name="weight">Weight(kg)</string>
    <string name="set_name">Set Name</string>
    <string name="set_age">Set Age</string>
    <string name="set_address">Set City</string>
    <string name="user_name">User Name</string>
    <string name="ad_name">Login Name</string>
    <string name="set_phone">Set Phone No.</string>
    <string name="set_email">Set Email</string>
    <string name="set_height">Set Height</string>
    <string name="set_weight">Set Weight</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="new_user">New User</string>
    <string name="exist_user">Existing User</string>
    <string name="ch_sel_user">Edit Selected User Info</string>
    <string name="switch_user">Switch User</string>
    <string name="sure_sel_user">Are you Sure you want to delete Selected Records</string>
    <string name="address">City</string>
    <string name="add_user">Add New User</string>
    <string name="sel_user">Select User</string>
    <string name="phone">Phone No.</string>
    <string name="edit_user">Edit User</string>
    <string name="security_ver">Enter the Security Questions for verification</string>
    <string name="spo2high"> Spo2 High</string>
    <string name="spo2low">Spo2 Low</string>
    <string name="heart_rate_high">Pulse Rate High</string>
    <string name="heart_rate_low">Pulse Rate Low</string>
    <string name="pi_high">PI High</string>
    <string name="pi_low">PI Low</string>
    <string name="security_question_1">Select your favourite color</string>
    <string name="security_question_2">Select your Date Of Birth</string>
    <string name="security_question_3">Select your Use Type</string>
    <string name="security_question_3_">Use type</string>
  <string name="user_guide_content">BPL Be Well App User Guide\n\n
1.       Connecting your mobile phone with BPL iOxy device:\n
To connect your mobile with BPL iOxy device, please follow the below steps\n
a)	Before connecting the BPL iOxy device to your mobile through Bluetooth, turn on the BPl iOxy device and place your finger
      into the slot provided. Wait until the data is displayed on BPL iOxy device’s screen post which you can establish the
      Bluetooth connection.\n
b)      Launch BPL Be Well App that is installed on your mobile.\n
c)	Create a personal login by Signing Up. \n
d)	Add a profile by entering your personal details. \n
e)	Tap on Connect to initiate Bluetooth Connection. \n
f)	Allow the App to Turn On Bluetooth on your mobile device. \n
g)      Tap on Search button to scan for the BPL iOxy device.\n
h)      Choose the ‘BPL iOxy’ from the displayed list of devices.\n\n
After following the above steps, real time data would be displayed.\n\n
Note: BPL iOxy device will automatically turn off if no signal is received within 10 seconds.\n\n
2.       Usage steps:\n
a)       After connecting your mobile to the device through Bluetooth, the data will be displayed on your BPL iOxy Application
        screen.\n
b)      After the connection, real time data of “Blood Oxygen (SPO2)”, “Pulse Rate (PR)” and “Perfusion Index (PI)”
        will be displayed.\n
c)       The application will record the monitoring results and displays with time range on your mobile phone.\n
d)	To start a measurement, Tap on the “START RECORDING” button.
Note: Ensure that at least 40 seconds has elapsed before you press on STOP RECORDING” for a record to get saved. \n
e) 	To save this measurement, Tap on the “STOP RECORDING” button.
        The App shall generate a record which includes “report” and “trend chart”.\n
Note: Multiple Users can monitor and save measurements using dedicated logins.
        Verify your user profile before taking measurements.\n\n
3.       Application use:\n
With the help of this App, the real time results can be synchronised with the device and shown on the
        smart phone for a better user experience. Using the smartphone, the user information can be edited and
        reports can be reviewed at any point of time.\n
User Info: To Edit user’s name, age, height, and weight. New Users can be added at any point of time.\n
User Guide: For App usage assistance\n\n
4.       Health Parameters measured:\n
a)       Oxy-haemoglobin Saturation: Oxygen Saturation (SPO2) is a term which refers to the concentration of oxygen
        in the blood. It measures the percentage of haemoglobin binding sites in the blood stream occupied by Oxygen,
        which is a very important physiological parameter of respiration cycle. The normal range of blood oxygen
        levels is considered to be 95-100 percent. Between 90-95 percent, the blood oxygen level is considered to be
        low but it does not necessarily indicate any health issue.\n
b)      Pulse Rate: Pulse, also known as heart rate is the number of times the heart beats per minute.
        Normally, pulse rate and heart rate are identical. The Pulse rate range for a healthy person would be 60-90
        bpm. Nervousness and an excited state of being may increase the pulse rate/heart rate.\n
c)       Perfusion Index: Perfusion index or PI is the ratio of the pulsatile blood flow to the non-pulsatile
        static blood flow in a peripheral tissue, such as fingertip, toe, or ear lobe. Perfusion Index is an
        indication of pulse strength at the sensor site. The PI value ranges from 0.02 percent for a very weak pulse
        to 20 percent for a very strong pulse. The Pi value varies depending on the users, physiological conditions,
        and monitoring sites. For a healthy user, the value of PI would be greater than three percent.\n\n
5.       About this software:\n
BPL Be Well app is designed and developed by BPL Medical Technologies Pvt. Ltd for the device BPL iOxy. This application is compatible with mobile phones with the operating system Android 4.3 (Or above).\n
</string>
    <string name="oxy_saturation_report">Oxyhemoglobin Saturation Report</string>
    <string name="spo2">Spo2</string>
    <string name="spo2_machine">measure Spo2 and its related parameters</string>
    <string name="weigh_machine">measure weighing machine</string>
    <string name="records">list of records</string>
    <string name="baseline">Base Line</string>
    <string name="duration">Duration</string>
    <string name="event">Event</string>
    <string name="minimum">Minimum</string>
    <string name="low_oxy_avg">Low Oxyhaemoglobin average  —</string>
    <string name="pulse_rate">Pulse Rate</string>
    <string name="avg_bp_min">Average(bpm/min)</string>
    <string name="min_bp_min">Minimum(bpm/min)</string>
    <string name="spo2_range">Spo2 Range</string>
    <string name="analysis">Analysis</string>
    <string name="pulse_rate_event">Pulse Rate Event</string>
    <string name="plethysmogram">Plethysmogram</string>
    <string name="testing_time">Testing Time</string>
    <string name="user_info">User Information:</string>
    <string name="device_mac_id">Device Name</string>
    <string name="range_1">99–90</string>
    <string name="range_2">89–80</string>
    <string name="range_3">79–70</string>
    <string name="range_4">69–60</string>
    <string name="range_5">59–50</string>
    <string name="range_6">49–40</string>
    <string name="range_7">39–30</string>
    <string name="user_name_">Enter User Name</string>
    <string-array name="search_by">
        <item> Name</item>
        <item> Phone</item>


    </string-array>
    <string name="connect_device">Switch On BPL iOxy device.Tap on Connect </string>
    <string name="disconnect_device">Do you want to exit BPL iOxy measurement ?</string>
    <string name="search">Search</string>
    <string name="search_by_name">Search By User Name</string>
    <string name="search_by_phone">Search By Phone No.</string>
    <string name="different_user">Sign in with a different account</string>
    <string name="ble_not_supported">This device doesn\'t support Bluetooth Low Energy</string>
    <string name="start_rec">Start Recording</string>
    <string name="stop_rec">Stop Recording</string>
    <string name="record_not_saved">Please wait atleast 40 sec in order to save current records</string>
    <string name="app_version_str">The current app version you are using is </string>
    <string name="field_empty">This field cannot be empty</string>
    <string name="search_bpl_dev">Connecting to BPL iOxy device…</string>
    <string name="proceed">Proceed</string>
    <string name="background_image">Background Image</string>
    <string name="back">Back key</string>
    <string name="base_header_title">Base header title</string>
    <string name="verify">Verify</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="user_guide_">User Guide</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="security_ques">Security Question</string>
    <string name="submit">SUBMIT</string>
    <string name="manage_user">MANAGE USER</string>
    <string name="update">UPDATE</string>
    <string name="bpl_moto">Happier Living Everyday</string>
    <string name="spo_percentage">SPO2 (%)</string>
    <string name="pr_bpm">Pulse Rate(bpm)</string>
    <string name="pi">PI</string>
    <string name="report">Report</string>
    <string name="chart">Chart</string>
    <string name="speaker_img">Speaker to enable alarm or not</string>
    <string name="record_img">To capture records</string>
    <string name="bluetooth_img">Indicator to know whether bluetooth is connected or not</string>
    <string name="action_report">generate selected report</string>
    <string name="action_report_chart">generate report chart of selected records</string>
    <string name="high">High</string>
    <string name="bluetooth">BLUETOOTH</string>
    <string name="select">Select</string>
    <string name="reset_pwd">RESET PASSWORD</string>
    <string name="help">HELP</string>
    <string name="records_weigh_a">RECORDS I-WEIGH 1</string>
    <string name="weight_">Weight in kg</string>
    <string name="bmi">BMI</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="bio_text">** Sit down and Wear the BPL iPressure as shown.\n** Relax and Switch ON the device.
            </string>
    <string name="body_fat">Body Fat</string>
    <string name="settings">Settings</string>
    <string name="rec_saved">Current Record Saved</string>
    <string name="bone_mass">Bone \n Mass</string>
    <string name="muscle_mass">Muscle Mass</string>
    <string name="wt_chart">Weight Chart (Weight in Kg VS Time)</string>
    <string name="bmi_chart">BMI Chart (BMI Vs Time)</string>
    <string name="date">Date</string>
    <string name="wt_kg">Wt(Kg)</string>
    <string name="visc_f">Visc. Fat</string>
    <string name="metaboli">Metabolism</string>
    <string name="water">Water</string>
</resources>