<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/baseheader"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/include"
        android:layout_height="match_parent">


    <LinearLayout

        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">



    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/my_profile"
        android:id="@+id/userdocument"
        android:elevation="4dp"
        android:background="@drawable/buttonshape"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"

        android:textSize="20sp"
         />


        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/user_guide"
            android:id="@+id/userguide"
            android:layout_marginTop="10dp"
            android:elevation="4dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:background="@drawable/buttonshape"

            />


        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/app_version"
            android:id="@+id/appupdate"
            android:textSize="20sp"
            android:elevation="4dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonshape"

            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/logout"
            android:id="@+id/logout"
            android:textSize="20sp"
            android:elevation="4dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"

            android:background="@drawable/buttonshape"

            />



    </LinearLayout>

    </ScrollView>
</RelativeLayout>
