<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@mipmap/bpl_be_well_parameter_bg"
    android:layout_height="match_parent">




    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:id="@+id/chart"
        android:layout_height="wrap_content">

        <customviews.MyCustomTextView
            android:layout_width="match_parent"
            android:text="@string/wt_chart"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="15sp"
            app:fontname="centralSansXBold"

            android:id="@+id/txt_wt_chart"
            android:layout_height="wrap_content" />




        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:id="@+id/layoutWeight"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">


            <canny.IweighChartYaxis
                android:layout_width="wrap_content"
                android:id="@+id/custom_day_chartYaxis"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content" />






            <HorizontalScrollView
                android:layout_width="match_parent"
                android:scrollbars="none"
                android:fillViewport="true"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:id="@+id/HeartRate"

                    android:layout_height="wrap_content">


                    <canny.IweighChartViewMonth
                        android:layout_width="match_parent"
                        android:id="@+id/weight_chart_"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_height="wrap_content" />



                </LinearLayout>

            </HorizontalScrollView>



        </LinearLayout>
        <customviews.MyCustomTextView
            android:layout_width="match_parent"
            android:text="@string/bmi_chart"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="15sp"
            app:fontname="centralSansXBold"
            android:id="@+id/txt_bmi_chart"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:id="@+id/layoutBmi"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">


            <canny.IweighBmiYaxis
                android:layout_width="wrap_content"
                android:id="@+id/iweighBmiYaxis"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content" />






            <HorizontalScrollView
                android:layout_width="match_parent"
                android:scrollbars="none"
                android:fillViewport="true"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:id="@+id/PO"

                    android:layout_height="wrap_content">


                    <canny.IweighBmiViewMonth
                        android:layout_width="match_parent"
                        android:id="@+id/bmi_chart_"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_height="wrap_content" />



                </LinearLayout>

            </HorizontalScrollView>



        </LinearLayout>


    </LinearLayout>
    <include layout="@layout/metabolism_chart_month"
        />


    <include layout="@layout/visceral_fat_chart_month"
        />

    <include layout="@layout/muscle_mass_chart_month"/>

    <include layout="@layout/bone_mass_chart_month"/>
    <include layout="@layout/water_chart_month"/>
    <include layout="@layout/body_fat_month"/>



    <customviews.MyCustomTextView
        android:layout_width="match_parent"
        android:text="@string/date"
        app:fontname="centralSansXBold"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:id="@+id/DateTime"
        android:layout_above="@+id/tabs2"
        android:layout_marginBottom="20dp"

        android:gravity="center"

        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/tabs2"

        android:layout_above="@+id/tabs"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        tools:ignore="UnknownIdInLayout">


        <Button
            android:layout_width="80dp"
            android:id="@+id/btn_bdyFat_chart"
            android:text="@string/body_fat"
            android:padding="5dp"

            android:background="@mipmap/button_green"
            android:layout_height="30dp" />


        <Button
            android:layout_width="70dp"
            android:id="@+id/btn_bdy_water_chart"
            android:text="@string/water"
            android:padding="5dp"

            android:layout_marginStart="5dp"
            android:background="@mipmap/button_green"
            android:layout_height="30dp" />

        <Button
            android:layout_width="100dp"
            android:id="@+id/btn_muscle_chart"
            android:text="@string/muscle_mass"
            android:layout_marginStart="5dp"
            android:padding="5dp"
            android:background="@mipmap/button_green"
            android:layout_height="30dp" />
        <Button
            android:layout_width="100dp"
            android:id="@+id/btn_bone_mass_chart"
            android:text="@string/bone_mass"
            android:layout_marginStart="5dp"
            android:padding="5dp"
            android:background="@mipmap/button_green"
            android:layout_height="30dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/tabs"

        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        tools:ignore="UnknownIdInLayout">


        <Button
            android:layout_width="80dp"
            android:id="@+id/btn_weight_chart"
            android:text="@string/wt_kg"
            android:padding="5dp"

            android:background="@mipmap/button_green"
            android:layout_height="30dp" />


        <Button
            android:layout_width="70dp"
            android:id="@+id/btn_bmi_chart"
            android:text="@string/bmi"
            android:padding="5dp"

            android:layout_marginStart="5dp"
            android:background="@mipmap/button_green"
            android:layout_height="30dp" />

        <Button
            android:layout_width="100dp"
            android:id="@+id/metabolism_chart"
            android:text="@string/metaboli"
            android:layout_marginStart="5dp"
            android:padding="5dp"
            android:background="@mipmap/button_green"
            android:layout_height="30dp" />
        <Button
            android:layout_width="100dp"
            android:id="@+id/btn_vfat_chart"
            android:text="@string/visc_f"
            android:layout_marginStart="5dp"
            android:padding="5dp"
            android:background="@mipmap/button_green"
            android:layout_height="30dp" />

    </LinearLayout>
</RelativeLayout>